<resources>
    <string name="app_name">TodoAppC42</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New task</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="done">Done!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text">Edit Text</string>
    <string name="save_changes">Save Changes</string>
</resources>