<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    tools:context=".ui.screens.main.fragments.todo_list.EditTaskFragment"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/fragmentTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/edit_text"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleEditInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fragmentTitleTV">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/titleEditInput">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:minLines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/SelectedEditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditInput"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1/1/2025"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/grey2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SelectedEditTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/SelectedEditDate"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12:30"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/grey2"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/SelectedEditTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="22dp"
            android:text="@string/save_changes"
            android:textSize="18sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>